--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "webapp-fork",
   "version": "1.0.0",
   "description": "g",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "nodemon src/index.js"
   },
   "keywords": [],
   "author": "Shreyas Sreedhar",
@@ -15,5 +16,8 @@
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
