--- a/.github/workflows/basic-validation.yml
+++ b/.github/workflows/basic-validation.yml
@@ -4,18 +4,26 @@
 
 # This workflow currently just echos a command
 
-name: basic-validation
-on:
-  pull_request:
-    branches:
-      - main
+# name: basic-validation
+# on:
+#   pull_request:
+#     branches:
+#       - main
 
+# jobs:
+#   basic-job:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout repo
+#         uses: actions/checkout@v3
+#       - name: Workflow-test command
+#         run: echo "This is just a test command to checkworkflow - does nothing"
+
+name: Test Workflow
+on: [push]
 jobs:
-  basic-job:
+  test-job:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-      - name: Workflow-test command
-        run: echo "This is just a test command to checkworkflow - does nothing"
+      - run: echo "This is a test"
