--- a/.github/workflows/basic-validation.yml
+++ b/.github/workflows/basic-validation.yml
@@ -20,8 +20,11 @@
 #       - name: Workflow-test command
 #         run: echo "This is just a test command to checkworkflow - does nothing"
 
-name: Test Workflow
-on: [push]
+name: basic-validation
+on:
+  pull_request:
+    branches:
+      - main
 jobs:
   test-job:
     runs-on: ubuntu-latest
