--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Shreyas Sreedhar",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "pg": "^8.13.0",
