--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "g",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
@@ -20,6 +20,8 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
