--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "g",
   "main": "src/index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --forceExit",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
