--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
-PORT=
+# Environment Configuration
+NODE_ENV="<your environment>"
+
+# Database Configuration
+DB_NAME="<your database name>"
+DB_USER="<your database user>"
+DB_PASSWORD="<your database password>"
+DB_HOST="<your database host>"
+DB_PORT="<your database port>"
+DB_TABLE_NAME="<your database table name>"
+DB_SCHEMA="<your database schema>"
+
+# Server Configuration
+PORT="<your server port>"
