--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -8,14 +8,13 @@ on:
     branches:
       - main
       - "A[0-9][0-9]/[0-9][0-9]"
-
 jobs:
-  test:
+  setup:
     runs-on: ubuntu-latest
 
     services:
       postgres:
-        image: postgres:latest
+        image: postgres:13
         env:
           POSTGRES_DB: ${{ secrets.DB_NAME }}
           POSTGRES_USER: ${{ secrets.DB_USER }}
@@ -23,22 +22,30 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U ${DB_USER}"
-          --health-interval 10s 
-          --health-timeout 5s 
-          --health-retries 5
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
-      - name: Check out code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "21.1.0"
+          node-version: "20"
 
       - name: Install dependencies
         run: npm install
 
-      - name: Run Tests
-        run: echo "TIll the test"
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          until pg_isready -h localhost -p 5432; do
+            echo "Waiting for PostgreSQL...";
+            sleep 5;
+          done
+        shell: bash
+
+      - name: Good to go!
+        run: echo "Setup complete."
