--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -49,3 +49,9 @@ jobs:
 
       - name: Good to go!
         run: echo "Setup complete."
+
+      - name: Install the dependencies
+        run: npm ci
+
+      - name: Run unit tests
+        run: npm test
