--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Wait for PostgreSQL to be ready
         run: |
-          until pg_isready -h localhost -p 5432; do
+          until PGPASSWORD=${{ secrets.DB_PASSWORD }} psql -h localhost -U ${{ secrets.DB_USER }} -d ${{ secrets.DB_NAME }} -c '\q'; do
             echo "Waiting for PostgreSQL...";
             sleep 5;
           done
@@ -55,3 +55,7 @@ jobs:
 
       - name: Run unit tests
         run: npm run test:github
+        env:
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
