chore: testing workflow

--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - main
       - "A[0-9][0-9]/[0-9][0-9]"
+
 jobs:
   setup:
     runs-on: ubuntu-latest
@@ -16,9 +17,8 @@ jobs:
       postgres:
         image: postgres:13
         env:
-          POSTGRES_DB: ${{ secrets.DB_NAME }}
-          POSTGRES_USER: ${{ secrets.DB_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          POSTGRES_DB: postgres
+          POSTGRES_PASSWORD: postgres
         ports:
           - 5432:5432
         options: >-
@@ -39,21 +39,30 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # - name: Wait for PostgreSQL to be ready
-      #   run: |
-      #     until PGPASSWORD=${{ secrets.DB_PASSWORD }} psql -h localhost -U ${{ secrets.DB_USER }} -d ${{ secrets.DB_NAME }} -c '\q'; do
-      #       echo "Waiting for PostgreSQL...";
-      #       sleep 5;
-      #     done
-      #   shell: bash
+      - name: Create application database and user
+        run: |
+          PGPASSWORD=postgres psql -h localhost -U postgres -c "CREATE DATABASE ${DB_NAME};"
+          PGPASSWORD=postgres psql -h localhost -U postgres -c "CREATE USER ${DB_USER} WITH ENCRYPTED PASSWORD '${DB_PASSWORD}';"
+          PGPASSWORD=postgres psql -h localhost -U postgres -c "GRANT ALL PRIVILEGES ON DATABASE ${DB_NAME} TO ${DB_USER};"
+        env:
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          until PGPASSWORD=${{ secrets.DB_PASSWORD }} psql -h localhost -U ${{ secrets.DB_USER }} -d ${{ secrets.DB_NAME }} -c '\q'; do
+            echo "Waiting for PostgreSQL...";
+            sleep 5;
+          done
+        shell: bash
 
       - name: Good to go!
         run: echo "Setup complete."
-
-      - name: Install the dependencies
-        run: npm ci
 
       - name: Run unit tests
         run: npm run test:github
         env:
           DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
