--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -40,11 +40,16 @@ jobs:
 
       - name: Set up PostgreSQL database and user
         run: |
-          PGPASSWORD=postgres psql -h localhost -U postgres -c "CREATE DATABASE ${{ secrets.DB_NAME }};"
-          PGPASSWORD=postgres psql -h localhost -U postgres -c "CREATE USER ${{ secrets.DB_USER }} WITH ENCRYPTED PASSWORD '${{ secrets.DB_PASSWORD }}';"
-          PGPASSWORD=postgres psql -h localhost -U postgres -c "GRANT ALL PRIVILEGES ON DATABASE ${{ secrets.DB_NAME }} TO ${{ secrets.DB_USER }};"
+          PGPASSWORD=postgres psql -h localhost -U postgres << EOF
+          CREATE DATABASE $DB_NAME;
+          CREATE USER $DB_USER WITH ENCRYPTED PASSWORD '$DB_PASSWORD';
+          GRANT ALL PRIVILEGES ON DATABASE $DB_NAME TO $DB_USER;
+          EOF
         env:
           PGPASSWORD: postgres
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
       - name: Run unit tests
         run: npm run test:github
