--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -40,22 +40,17 @@ jobs:
 
       - name: Set up PostgreSQL database and user
         run: |
-          PGPASSWORD=postgres psql -h localhost -U postgres << EOF
-          CREATE DATABASE $DB_NAME;
-          CREATE USER $DB_USER WITH ENCRYPTED PASSWORD '$DB_PASSWORD';
-          GRANT ALL PRIVILEGES ON DATABASE $DB_NAME TO $DB_USER;
+          PGPASSWORD=postgres psql -h localhost -U postgres <<- EOF
+          CREATE DATABASE test;
+          CREATE USER testuser WITH ENCRYPTED PASSWORD 'testpassword';
+          GRANT ALL PRIVILEGES ON DATABASE test TO testuser;
           EOF
-        env:
-          PGPASSWORD: postgres
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
       - name: Run unit tests
         run: npm run test:github
         env:
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: test
+          DB_USER: testuser
+          DB_PASSWORD: testpassword
           DB_HOST: localhost
           DB_PORT: 5432
