--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -8,24 +8,24 @@ on:
     branches:
       - main
       - "A[0-9][0-9]/[0-9][0-9]"
-
 jobs:
-  test:
+  setup:
     runs-on: ubuntu-latest
 
     services:
       postgres:
         image: postgres:13
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
+          POSTGRES_USER: ${{ secrets.DB_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
         ports:
           - 5432:5432
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -36,21 +36,21 @@ jobs:
           node-version: "20"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Set up PostgreSQL database and user
+      - name: Wait for PostgreSQL to be ready
         run: |
-          PGPASSWORD=postgres psql -h localhost -U postgres <<- EOF
-          CREATE DATABASE test;
-          CREATE USER testuser WITH ENCRYPTED PASSWORD 'testpassword';
-          GRANT ALL PRIVILEGES ON DATABASE test TO testuser;
-          EOF
+          until pg_isready -h localhost -p 5432; do
+            echo "Waiting for PostgreSQL...";
+            sleep 5;
+          done
+        shell: bash
+
+      - name: Good to go!
+        run: echo "Setup complete."
+
+      - name: Install the dependencies
+        run: npm ci
 
       - name: Run unit tests
         run: npm run test:github
-        env:
-          DB_NAME: test
-          DB_USER: testuser
-          DB_PASSWORD: testpassword
-          DB_HOST: localhost
-          DB_PORT: 5432
