--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -8,49 +8,27 @@ on:
     branches:
       - main
       - "A[0-9][0-9]/[0-9][0-9]"
+
 jobs:
-  setup:
+  container-job:
     runs-on: ubuntu-latest
+    container: node:20-bookworm-slim
 
     services:
       postgres:
-        image: postgres:13
+        image: postgres
         env:
-          POSTGRES_DB: ${{ secrets.DB_NAME }}
-          POSTGRES_USER: ${{ secrets.DB_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        ports:
-          - 5432:5432
+          POSTGRES_PASSWORD: postgres
         options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          --health-cmd service postgresql status
+
     steps:
-      - name: Checkout repository
+      - name: Check out repository code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
       - name: Install dependencies
-        run: npm install
-
-      - name: Wait for PostgreSQL to be ready
-        run: |
-          until pg_isready -h localhost -p 5432; do
-            echo "Waiting for PostgreSQL...";
-            sleep 5;
-          done
-        shell: bash
-
-      - name: Good to go!
-        run: echo "Setup complete."
-
-      - name: Install the dependencies
         run: npm ci
-
-      - name: Run unit tests
-        run: npm run test:github
