--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -8,27 +8,43 @@ on:
     branches:
       - main
       - "A[0-9][0-9]/[0-9][0-9]"
-
 jobs:
-  container-job:
+  setup:
     runs-on: ubuntu-latest
-    container: node:20-bookworm-slim
 
     services:
       postgres:
-        image: postgres
+        image: postgres:13
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
+          POSTGRES_USER: ${{ secrets.DB_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        ports:
+          - 5432:5432
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-          --health-cmd service postgresql status
-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     steps:
-      - name: Check out repository code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          until pg_isready -h localhost -p 5432; do
+            echo "Waiting for PostgreSQL...";
+            sleep 5;
+          done
+        shell: bash
+
+      - name: Good to go!
+        run: echo "Setup complete."
