--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - main
       - "A[0-9][0-9]/[0-9][0-9]"
+
 jobs:
   setup:
     runs-on: ubuntu-latest
@@ -26,6 +27,17 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
+
+    env:
+      NODE_ENV: test
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_SCHEMA: public
+      PORT: ${{ secrets.DB_PORT }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -46,11 +58,5 @@ jobs:
           done
         shell: bash
 
-      - name: Good to go!
-        run: echo "Setup complete."
-
-      - name: Install the dependencies
-        run: npm ci
-
-      - name: Run unit tests
+      - name: Run tests
         run: npm run test:github
