--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
+      - "A[0-9][0-9]/[0-9][0-9]"
 
 jobs:
   integration_test:
