--- a/.github/workflows/packer-check.yml
+++ b/.github/workflows/packer-check.yml
@@ -2,12 +2,12 @@ name: Packer Status Check
 
 on:
   pull_request:
-    branches:
-      - main
+    branches: ["main"]
 
 jobs:
   packer_format_validate:
     runs-on: ubuntu-latest
+    name: Run Packer
 
     steps:
       - name: Checkout code
