--- a/.github/workflows/basic-validation.yml
+++ b/.github/workflows/basic-validation.yml
@@ -5,8 +5,7 @@
 name: basic-Workflow-validation
 on:
   pull_request:
-    branches:
-      - main
+    branches: ["main"]
 jobs:
   test-job:
     runs-on: ubuntu-latest
