--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -2,12 +2,7 @@ name: CI-check
 
 on:
   pull_request:
-    branches:
-      - main
-  push:
-    branches:
-      - main
-      - "A[0-9][0-9]/[0-9][0-9]"
+    branches: ["main"]
 
 jobs:
   integration_test:
