--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,8 +2,7 @@ name: Integration Test run
 
 on:
   pull_request:
-    branches: ["main"]
-
+    types: [opened, reopened]
 jobs:
   integration:
     runs-on: ubuntu-latest
