--- a/.github/workflows/packer-status.yml
+++ b/.github/workflows/packer-status.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Packer fmt
         run: |
-          packer fmt -check ./packer/aws-ubuntu.pckr.hcl
+          packer fmt -check /packer/aws-ubuntu.pckr.hcl
           if [[ $(git diff --stat) != '' ]]; then
             echo "Packer template is not formatted correctly."
             exit 1
