--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,7 +2,7 @@ name: Integration Test run
 
 on:
   pull_request:
-    types: [opened, reopened]
+    branches: ["main"]
   workflow_dispatch:
 jobs:
   integration:
