--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,7 +2,8 @@ name: Integration Test run
 
 on:
   pull_request:
-    types: [opened, reopened]
+    branches: ["main"]
+
 jobs:
   integration:
     runs-on: ubuntu-latest
