--- a/.github/workflows/packer-status.yml
+++ b/.github/workflows/packer-status.yml
@@ -28,12 +28,11 @@ jobs:
 
       - name: Run `packer init`
         id: init
-        working-directory: packer/
         run: packer init .
 
       - name: Run Packer fmt
         run: |
-          packer fmt -check aws-ubuntu.pkr.hcl
+          packer fmt -check packer/aws-ubuntu.pkr.hcl
           if [[ $(git diff --stat) != '' ]]; then
             echo "Packer template is not formatted correctly."
             exit 1
