--- a/.github/workflows/packer-status.yml
+++ b/.github/workflows/packer-status.yml
@@ -3,10 +3,7 @@ name: packer status run
 on:
   pull_request:
     branches:
-      - "main"
-    types:
-      - opened
-      - synchronize
+      - main
   workflow_dispatch:
 
 jobs:
@@ -32,11 +29,11 @@ jobs:
 
       - name: Run Packer fmt
         run: |
-          packer fmt -check packer/aws-ubuntu.pkr.hcl
-          if [[ $(git diff --stat) != '' ]]; then
-            echo "Packer template is not formatted correctly."
-            exit 1
-          fi
+          packer fmt -check -var aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_CLI }} \
+                          -var aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }} \
+                          -var aws_region=${{ secrets.AWS_REGION }} \
+                          -var instance_type=${{ secrets.INSTANCE_TYPE }} \
+                          packer/aws-ubuntu.pkr.hcl
 
       - name: Run Packer validate
         run: |
