--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -36,13 +36,35 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
           POSTGRES_DB: ${{ secrets.DB_NAME }}
         run: |
-          sudo -u postgres psql -c "CREATE USER $POSTGRES_USER WITH PASSWORD '$POSTGRES_PASSWORD';"
-          sudo -u postgres psql -c "ALTER USER $POSTGRES_USER CREATEDB;"
-          sudo -u postgres psql -c "CREATE DATABASE $POSTGRES_DB OWNER $POSTGRES_USER;"
+          cd /tmp
+          sudo -u postgres psql <<EOF
+          DO \$\$
+          BEGIN
+          IF NOT EXISTS (
+              SELECT FROM pg_catalog.pg_roles
+              WHERE rolname = '${POSTGRES_USER}') THEN
+              CREATE USER "${POSTGRES_USER}" WITH PASSWORD '${POSTGRES_PASSWORD}';
+          END IF;
+          END
+          \$\$;
+
+          DO \$\$
+          BEGIN
+          IF NOT EXISTS (
+              SELECT FROM pg_database
+              WHERE datname = '${POSTGRES_DB}') THEN
+              CREATE DATABASE "${POSTGRES_DB}" OWNER "${POSTGRES_USER}";
+          END IF;
+          END
+          \$\$;
+
+          ALTER USER "${POSTGRES_USER}" CREATEDB;
+          EOF
           echo "PostgreSQL setup completed."
 
       - name: Build and Test Application
         run: |
+
           npm install
           npm run test:github
 
