--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -3,7 +3,7 @@ name: Build Packer Image
 on:
   pull_request:
     branches: ["main"]
-    types: ["closed"]
+    # types: ["closed"]
   push:
     branches: ["main"]
 
@@ -36,14 +36,13 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
           POSTGRES_DB: ${{ secrets.DB_NAME }}
         run: |
-          cd /tmp
           sudo -u postgres psql <<EOF
           DO \$\$
           BEGIN
           IF NOT EXISTS (
               SELECT FROM pg_catalog.pg_roles
               WHERE rolname = '${POSTGRES_USER}') THEN
-              CREATE USER "${POSTGRES_USER}" WITH PASSWORD "${POSTGRES_PASSWORD};
+              CREATE USER "${POSTGRES_USER}" WITH PASSWORD '${POSTGRES_PASSWORD}';
           END IF;
           END
           \$\$;
@@ -64,7 +63,6 @@ jobs:
 
       - name: Build and Test Application
         run: |
-
           npm install
           npm run test:github
 
@@ -78,8 +76,8 @@ jobs:
 
       - name: Run Packer Build
         run: |
-          packer build    -var aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_CLI }} \
-                          -var aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }} \
-                          -var aws_region=${{ secrets.AWS_REGION }} \
-                          -var instance_type=${{ secrets.INSTANCE_TYPE }} \
-                           packer/aws-ubuntu.pkr.hcl
+          packer build -var aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_CLI }} \
+                       -var aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }} \
+                       -var aws_region=${{ secrets.AWS_REGION }} \
+                       -var instance_type=${{ secrets.INSTANCE_TYPE }} \
+                       packer/aws-ubuntu.pkr.hcl
