--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -3,7 +3,6 @@ name: Build Packer Image
 on:
   pull_request:
     branches: ["main"]
-    # types: ["closed"]
   push:
     branches: ["main"]
 
@@ -11,6 +10,7 @@ jobs:
   packer_image_build:
     runs-on: ubuntu-latest
     name: Run Packer
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -30,38 +30,46 @@ jobs:
       - name: Start PostgreSQL Service
         run: sudo service postgresql start
 
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          until pg_isready -h localhost -p 5432; do
+            echo "Waiting for PostgreSQL...";
+            sleep 5;
+          done
+
       - name: Configure PostgreSQL User and Database
         env:
           POSTGRES_USER: ${{ secrets.DB_USER }}
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
           POSTGRES_DB: ${{ secrets.DB_NAME }}
         run: |
-          sudo -u postgres psql <<EOF
-          DO \$\$
-          BEGIN
-          IF NOT EXISTS (
-              SELECT FROM pg_catalog.pg_roles
-              WHERE rolname = '${POSTGRES_USER}') THEN
-              CREATE USER "${POSTGRES_USER}" WITH PASSWORD '${POSTGRES_PASSWORD}';
-          END IF;
-          END
-          \$\$;
+          sudo -u postgres psql -c "DO \$\$ BEGIN IF NOT EXISTS (SELECT FROM pg_catalog.pg_roles WHERE rolname = '${POSTGRES_USER}') THEN CREATE USER \"${POSTGRES_USER}\" WITH PASSWORD '${POSTGRES_PASSWORD}'; END IF; END \$\$;"
+          sudo -u postgres psql -c "ALTER USER \"${POSTGRES_USER}\" CREATEDB;"
+          sudo -u postgres psql -c "CREATE DATABASE \"${POSTGRES_DB}\" OWNER \"${POSTGRES_USER}\";"
+        shell: bash
 
-          DO \$\$
-          BEGIN
-          IF NOT EXISTS (
-              SELECT FROM pg_database
-              WHERE datname = '${POSTGRES_DB}') THEN
-              CREATE DATABASE "${POSTGRES_DB}" OWNER "${POSTGRES_USER}";
-          END IF;
-          END
-          \$\$;
-
-          ALTER USER "${POSTGRES_USER}" CREATEDB;
-          EOF
-          echo "PostgreSQL setup completed."
+      - name: Set environment variables
+        env:
+          NODE_ENV: test
+          DB_HOST: localhost
+          DB_PORT: 5432
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_SCHEMA: public
+          PORT: ${{ secrets.DB_PORT }}
+        run: echo "Environment variables set."
 
       - name: Build and Test Application
+        env:
+          NODE_ENV: test
+          DB_HOST: localhost
+          DB_PORT: 5432
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_SCHEMA: public
+          PORT: ${{ secrets.DB_PORT }}
         run: |
           npm install
           npm run test:github
