--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -66,10 +66,27 @@ jobs:
       - name: Run tests
         run: npm run test:github
 
-      - name: Set up Packer
-        uses: hashicorp/setup-packer@main
-        with:
-          version: "latest"
+      - name: Run `packer init`
+        id: init
+        run: |
+          cd packer
+          packer init .
+
+      - name: Run Packer fmt
+        run: |
+          packer fmt -check -var aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_CLI }} \
+                          -var aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }} \
+                          -var aws_region=${{ secrets.AWS_REGION }} \
+                          -var instance_type=${{ secrets.INSTANCE_TYPE }} \
+                          packer/aws-ubuntu.pkr.hcl
+
+      - name: Run Packer validate
+        run: |
+          packer validate -var aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_CLI }} \
+                          -var aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }} \
+                          -var aws_region=${{ secrets.AWS_REGION }} \
+                          -var instance_type=${{ secrets.INSTANCE_TYPE }} \
+                          packer/aws-ubuntu.pkr.hcl
 
       - name: Run Packer Build
         run: |
