--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -1,10 +1,8 @@
 name: Build Packer Image
 
 on:
-  pull_request:
-    branches: ["main"]
   push:
-    branches: ["main"]
+    branches: ["main", "A[0-9][0-9]/[0-9][0-9]"]
 
 jobs:
   packer_image_build:
@@ -54,6 +52,14 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Prepare application for Packer
+        run: |
+          mkdir -p artifacts
+          cp -r src package.json package-lock.json artifacts/
+          cd artifacts
+          zip -r ../packer/webapp.zip .
+          cd ..
 
       - name: Wait for PostgreSQL to be ready
         run: |
