--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -2,7 +2,7 @@ name: Build Packer Image
 
 on:
   push:
-    branches: ["main", "A[0-9][0-9]/[0-9][0-9]"]
+    branches: ["main"]
 
 jobs:
   packer_image_build:
