--- a/.github/workflows/packer-status.yml
+++ b/.github/workflows/packer-status.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   packer_format_validate:
     runs-on: ubuntu-latest
-    name: Run Packer
+    name: Packer Format
 
     steps:
       - name: Checkout code
