--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -44,6 +44,17 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
+      - name: Create .env file
+        run: |
+          echo "NODE_ENV=development" > .env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_PASSWORD='${{ secrets.DB_PASSWORD }}'" >> .env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
+          echo "PORT="${{ secrets.PORT }}" >> .env
+          echo "DB_TABLE_NAME=${{ secrets.DB_TABLE_NAME }}" >> .env
+          echo "DB_SCHEMA='${{ secrets.DB_SCHEMA }}'" >> .env
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -56,7 +67,7 @@ jobs:
       - name: Prepare application for Packer
         run: |
           mkdir -p artifacts
-          cp -r src package.json package-lock.json artifacts/
+          cp -r src .env package.json package-lock.json artifacts/
           cd artifacts
           zip -r ../packer/webapp.zip .
           cd ..
