--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -49,12 +49,12 @@ jobs:
           echo "NODE_ENV=${{ secrets.DB_NAME }}" > .env
           echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
           echo "DB_USER=${{ secrets.DB_USER }}" >> .env
-          echo "DB_PASSWORD='${{ secrets.DB_PASSWORD }}'" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
           echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
-          echo "PORT='${{ secrets.PORT }}'" >> .env
+          echo "PORT=${{ secrets.PORT }}" >> .env
           echo "DB_TABLE_NAME=${{ secrets.DB_TABLE_NAME }}" >> .env
-          echo "DB_SCHEMA='${{ secrets.DB_SCHEMA }}'" >> .env
+          echo "DB_SCHEMA=${{ secrets.DB_SCHEMA }}" >> .env
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
