feat: Adding aws rds

--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -46,7 +46,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Create .env file
         run: |
-          echo "NODE_ENV=${{ secrets.DB_NAME }}" > .env
+          echo "NODE_ENV=${{ secrets.NODE_ENV }}" > .env
           echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
           echo "DB_USER=${{ secrets.DB_USER }}" >> .env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
