--- a/packer/csye6225.service
+++ b/packer/csye6225.service
@@ -1,14 +1,20 @@
 [Unit]
 Description=CSYE 6225 Web Application
-After=network.target postgresql.service
+After=network.target
 
 [Service]
 Type=simple
 User=csye6225
 Group=csye6225
 WorkingDirectory=/opt/csye6225/webapp
-Environment=NODE_ENV=production
-Environment=PORT=8080
+EnvironmentFile=/opt/csye6225/webapp/.env
+Environment=NODE_ENV=${NODE_ENV}
+Environment=PORT=${PORT}
+Environment=DB_HOST=${DB_HOST}
+Environment=DB_USER=${DB_USER}
+Environment=DB_PASSWORD=${DB_PASSWORD}
+Environment=DB_NAME=${DB_NAME}
+Environment=DB_PORT=5432
 ExecStart=/usr/bin/node /opt/csye6225/webapp/src/index.js
 Restart=always
 RestartSec=10
