--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "Shreyas Sreedhar",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
