--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Shreyas Sreedhar",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1691.0",
+    "@aws-sdk/client-s3": "^3.679.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
