--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -1,11 +1,13 @@
 name: Build Packer Image
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches: ["main"]
 
 jobs:
   packer_image_build:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     services:
@@ -113,3 +115,42 @@ jobs:
                        -var aws_region=${{ secrets.AWS_REGION }} \
                        -var instance_type=${{ secrets.INSTANCE_TYPE }} \
                        packer/aws-ubuntu.pkr.hcl
+      - name: Run Packer Build Demo
+        run: |
+          packer build -var aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_CLI }} \
+                       -var aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }} \
+                       -var aws_region=${{ secrets.AWS_REGION }} \
+                       -var instance_type=${{ secrets.INSTANCE_TYPE }} \
+                       packer/aws-ubuntu.pkr.hcl
+      - name: Extract the AMI ID
+        id: get_ami
+        run: |
+          AMI_ID=$(cat packer/manifest.json | jq -r '.builds[-1].artifact_id' | cut -d ':' -f2)
+          echo "AMI_ID=$AMI_ID" >> $GITHUB_OUTPUT
+        shell: bash
+        working-directory: packer
+
+      - name: Update the Launch Template with latest AMI ID
+        run: |
+          aws ec2 create-launch-template-version \
+            --launch-template-name "${{ secrets.LAUNCH_TEMPLATE_NAME }}" \
+            --source-version '$Latest' \
+            --version-description "New version with AMI ${{ steps.get_ami.outputs.AMI_ID }}" \
+            --launch-template-data '{"ImageId":"'"${{ steps.get_ami.outputs.AMI_ID }}"'"}'
+        shell: bash
+
+      - name: Update AutoScaling Group to use latest Launch Template version
+        run: |
+          aws autoscaling update-auto-scaling-group \
+            --auto-scaling-group-name "${{ secrets.AUTOSCALING_GROUP_NAME }}" \
+            --launch-template "LaunchTemplateName=${{ secrets.LAUNCH_TEMPLATE_NAME }},Version='$Latest'"
+        shell: bash
+      - name: Start Instance Refresh
+        id: instance_refresh
+        run: |
+          INSTANCE_REFRESH_ID=$(aws autoscaling start-instance-refresh \
+            --auto-scaling-group-name "${{ secrets.AUTOSCALING_GROUP_NAME }}" \
+            --preferences '{"InstanceWarmup": 300, "MinHealthyPercentage": 50}' \
+            --query "InstanceRefreshId" --output text)
+          echo "INSTANCE_REFRESH_ID=$INSTANCE_REFRESH_ID" >> $GITHUB_OUTPUT
+        shell: bash
