--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -110,14 +110,14 @@ jobs:
 
       - name: Run Packer Build
         run: |
-          packer build -var aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_CLI }} \
+          packer build -machine-readable -var aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_CLI }} \
                        -var aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_CLI }} \
                        -var aws_region=${{ secrets.AWS_REGION }} \
                        -var instance_type=${{ secrets.INSTANCE_TYPE }} \
                        packer/aws-ubuntu.pkr.hcl
       - name: Run Packer Build Demo
         run: |
-          packer build -var aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_CLI_DEMO }} \
+          packer build -machine-readable -var aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID_CLI_DEMO }} \
                        -var aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY_CLI_DEMO}} \
                        -var aws_region=${{ secrets.AWS_REGION }} \
                        -var instance_type=${{ secrets.INSTANCE_TYPE }} \
